# ugpy-neurofix

./: .gitignore  LICENSE.md  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
configs/: patchify_config.yaml  preprocess_config.yaml  unpatchify_config.yaml
src/ugpy_neurofix/: patchify_utils.py  preprocess.py
src/ugpy_neurofix/_tests/: test_patchify_utils.py
