[metadata]
name = vodex

description = NeuroFix : Segment neurons in Fixed Images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LemonJust/neurofix
author = Anna Nadtochiy
author_email = lemonjustgithub@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/LemonJust/neurofix/issues
    Documentation = https://github.com/LemonJust/neurofix#README.md
    Source Code = https://github.com/LemonJust/neurofix
    User Support = https://github.com/LemonJust/neurofix/issues

[options]
packages = find:
install_requires =
    numpy
    pathlib
    tifffile
    tqdm

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
